# ml_ops

./: .env  .gitignore  README.md  environment.yaml  hello.py  hello.sh  hello1.sh  hello2.py  load_dotenv.py  pyproject.toml  read_env.py  requirements.txt  tasks.py
.dvc/: config
src/mlops_exercises/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py
